test/sema/exercise/struct_member_not_initialized.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Color {
  r: number,
  g: number,
  b: number,
}

fn main(): unit {
  let x = Color {
  // CHECK: [[# @LINE - 1 ]]:17: error: field 'r' is not initialized
  // CHECK: [[# @LINE - 2 ]]:17: error: field 'g' is not initialized
    b: 2,
  };
}
